--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <body>
 
     <div class="main-container">
-        <h1>Buscador de Plazos Legales</h1>
+        <h2>Plazos procesales</h2>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Buscar por concepto, plazo o artículo...">
             <button id="searchButton">Buscar</button>
@@ -759,4 +759,5 @@
 </body>
 
 </html>
+
 
